fix: add accessToken to cookie
