# server/api/private/hooks.ts
@@ -1,7 +1,7 @@
 import assert from 'assert';
 import type { UserDto } from 'common/types/user';
 import { userUseCase } from 'domain/user/useCase/userUseCase';
-import { COOKIE_NAME } from 'service/constants';
+import { COOKIE_NAMES } from 'service/constants';
 import type { JwtUser } from 'service/types';
 import { defineHooks } from './$relay';
 
@@ -12,7 +12,7 @@ export default defineHooks(() => ({
     req.user = await req
       .jwtVerify<JwtUser>({ onlyCookie: true })
       .then((jwtUser) => {
-        const token = req.cookies[COOKIE_NAME];
+        const token = req.cookies[COOKIE_NAMES.accessToken];
         assert(token);
 
         return userUseCase.findOrCreateUser(jwtUser, token);
