# server/api/session/index.ts
@@ -2,7 +2,7 @@ import type { DefineMethods } from 'aspida';
 
 export type Methods = DefineMethods<{
   post: {
-    reqBody: { jwt: string };
+    reqBody: { idToken: string; accessToken: string };
     resBody: { status: 'success' };
   };
   delete: {
