# server/service/constants.ts
@@ -1,1 +1,1 @@
-export const COOKIE_NAME = 'session';
+export const COOKIE_NAMES = { idToken: 'idToken', accessToken: 'accessToken' };
